# wslib

./: LICENSE  README.md
delphi_wrap/: dxwslib.pas
delphi_wrap/demo/: Project1.dpr  Project1.dproj  Project1.dproj.local  Project1.identcache  Project1.stat  Unit1.dfm  Unit1.pas
wslib/: Cargo.toml
wslib/src/: client.rs  lib.rs  websocket_sender.rs  websocket_srv.rs
